# mira-mouse

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  NOTICE  README.en.md  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  audit.toml  deny.toml  design-qa.md  eslint.config.js  index.html  mira-mouse-log-system-ai-ide-prompt.md  mira-mouse-overlay-glass-fix-plan.md  mira-razer-comprehensive-read-support-ai-ide-prompt-v3-subagents.md  package-lock.json  package.json  plugins.lock.json  rust-toolchain.toml  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  device-support.yml  feature.yml
.github/workflows/: ci.yml  dependency-review.yml  local-ai-handler-release.yml  maintenance.yml  model-pack.yml  pipeline.yml  preview.yml  release.yml  security.yml  sync-rill-runtime.yml
config/: project-metadata.example.toml  project-metadata.toml
crates/mira-core/: Cargo.toml
crates/mira-core/src/: lib.rs
crates/mira-local-ai/: Cargo.toml
crates/mira-local-ai/src/: lib.rs
crates/mira-plugin-api/: Cargo.toml
crates/mira-plugin-api/src/: lib.rs
crates/mira-plugin-cli/: Cargo.toml
crates/mira-plugin-cli/src/: main.rs
crates/mira-plugin-runtime/: Cargo.toml
crates/mira-plugin-runtime/examples/: enumerate_hid.rs  list_hid.rs
crates/mira-plugin-runtime/src/: dsl.rs  engine.rs  hid.rs  lib.rs  onboard_profiles.rs  package.rs  protocol.rs
crates/mira-protocol/: Cargo.toml
crates/mira-protocol/src/: lib.rs
crates/mira-runtime/: Cargo.toml
crates/mira-runtime/configs/: model.json
crates/mira-runtime/src/: battery.rs  handler.rs  main.rs
crates/mira-testkit/: Cargo.toml
crates/mira-testkit/src/: lib.rs
docs/: assumptions-and-blockers.md  comment-and-doc-style.md  evidence-status.md  execution-plan.md  final-verification-report.md  install-homebrew.md  install-linux.md  install-macos.md  install-windows.md  license-notes.md  linux-permissions.md  local-ai-analysis-plan.md  logitech-public-source-matrix.md  mira-material-design-guidelines.md  official-references.md  plugin-adaptation-roadmap.md  plugin-package-format.md  plugin-publishing.md  plugin-review-checklist.md  plugin-sdk.md  plugin-security.md  plugin-testing.md  plugin-versioning.md  protocol-dsl.md  repository-settings.md  session-checkpoint.md  spec-traceability.md  threat-model.md  unsigned-release-security.md  video-script-amaster.md  zero-cost-release.md
docs/audits/: logitech-hidpp-latest-code-audit.md
docs/en/: README.md  install-homebrew.md  install-linux.md  install-macos.md  install-windows.md  license-notes.md  linux-permissions.md  plugin-package-format.md  plugin-sdk.md  plugin-security.md  protocol-dsl.md  unsigned-release-security.md
handlers/mira-battery-handler/: Cargo.toml  manifest.template.json
handlers/mira-battery-handler/src/: main.rs
handlers/mira-battery-handler/wit/: rill-handler.wit
homebrew/Casks/: mira.rb
local-ai/: model-manifest.json
schemas/: plugin-manifest-v1.schema.json  plugins-lock-v1.schema.json
scripts/: app-version.mjs  build-handler-manifest.mjs  build-handler-release-index.mjs  build-local-ai-release-index.mjs  build-model-manifest.mjs  build-rill-runtime-release-index.mjs  check-boundaries.mjs  check-bundled-plugin-contract.mjs  check-local-ai-assets.mjs  check-structured.mjs  check-version-sources.mjs  create-dmg.sh  generate-dmg-background.py  generate-icon.mjs  generate-macos-dark-icon.sh  generate-tray-mouse-icons.mjs  generate-tray-mouse-icons.py  generate-windows-installer-assets.py  inspect-mira-local-ai-index.mjs  install-git-hooks.sh  local-ci.sh  quick-check.sh  resolve-latest-rill-release.mjs  signed-release-index.mjs  sync-version.mjs
scripts/git-hooks/: pre-push
src/: About.test.tsx  About.tsx  App.device.test.tsx  App.overlay.test.tsx  App.test.tsx  App.tsx  BatteryLevelIcon.test.tsx  BatteryLevelIcon.tsx  BatteryUsage.test.tsx  BatteryUsage.tsx  DetailValue.test.tsx  DetailValue.tsx  ExternalLink.tsx  Settings.test.tsx  Settings.tsx  Tooltip.tsx  i18n.test.ts  i18n.ts  local-ai-updater.ts  localAi.ts  main.tsx  mock.ts  notify.ts  plugin-updater.test.ts  plugin-updater.ts  plugin-utils.ts  pluginAdapter.test.ts  pluginAdapter.ts  segmentedControl.test.ts  segmentedControl.ts  styles.css  test-setup.ts  theme.test.ts  theme.ts  types.ts  update-check-scheduler.ts  update-priority.ts  updater.test.ts  updater.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.test.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon-dark.icns  icon.icns
src-tauri/resources/local-ai/: handler.rillhandler  model.rillpack
src-tauri/src/: battery_history.rs  lib.rs  local_ai_auto_rollback.rs  local_ai_controller.rs  local_ai_runtime.rs  local_ai_update.rs  main.rs  pointer_activity.rs  unlock_watcher.rs
src-tauri/src/logging/: buffer.rs  commands.rs  export.rs  frontend.rs  mod.rs  model.rs  protocol_event.rs  redaction.rs  storage.rs
src-tauri/src/tray/: dynamic_icon.rs  image.rs  macos.rs  mod.rs  renderer.rs  state.rs  static_icon.rs  style.rs
src/assets/: lightningExactMatchPath.ts
src/locales/: en.json  zh-CN.json
src/logs/: LogPage.test.tsx  LogPage.tsx  log-client.ts  log-types.ts
src/overlay/: Modal.test.tsx  Modal.tsx  OverlayPortal.test.tsx  OverlayPortal.tsx  Popover.tsx  index.ts  overlayRoot.ts  overlayStack.ts  useOverlayStack.ts
xtask/: Cargo.toml
xtask/src/: main.rs
