# SPDX-License-Identifier: AGPL-3.0-or-later
[workspace]
resolver = "2"
members = [
  "crates/mira-core",
  "crates/mira-protocol",
  "crates/mira-plugin-api",
  "crates/mira-plugin-runtime",
  "crates/mira-plugin-cli",
  "crates/mira-local-ai",
  "crates/mira-testkit",
  "src-tauri",
  "xtask",
]
exclude = [
  "handlers/mira-battery-handler",
]

[workspace.package]
version = "0.9.16"
edition = "2021"
license = "AGPL-3.0-or-later"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
ed25519-dalek = "3.0.0"
hex = "0.4.3"
semver = { version = "1.0.24", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sha2 = "0.10.8"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
rill-runtime-protocol = "0.8.1"
rill-ml = { version = "0.8.1", default-features = false }
tempfile = "3.14.0"
thiserror = "2.0.9"
toml = "1.1"
walkdir = "2.5.0"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
