# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "mira-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "mira_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mira"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["image-png", "macos-private-api", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
mira-core = { path = "../crates/mira-core" }
mira-plugin-runtime = { path = "../crates/mira-plugin-runtime" }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
semver = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
hidapi = "2.6"
window-vibrancy = "0.6"
