# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "mira-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "mira_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mira"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
auto-launch = "0.6"
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["image-png", "macos-private-api", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
notify-rust = "4.18"
mira-core = { path = "../crates/mira-core" }
mira-plugin-runtime = { path = "../crates/mira-plugin-runtime" }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
semver = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
rill-runtime-protocol = { workspace = true }
mira-protocol = { path = "../crates/mira-protocol" }
hidapi = "2.6"
window-vibrancy = "0.6"
sys-locale = "0.3.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
png = "0.18"
nusb = "0.2.4"
futures-lite = "2"
zip = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std", "NSApplication", "NSImage",
    "NSStatusBar", "NSStatusItem", "NSStatusBarButton",
    "NSButton", "NSControl", "NSResponder", "NSView",
    "NSMenu", "NSMenuItem", "NSAppearance",
    "objc2-core-foundation",
] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSArray", "NSData", "NSString", "NSGeometry"] }
objc2-core-graphics = { version = "0.3", default-features = false, features = ["CGEventSource", "CGEventTypes"] }

[target.'cfg(target_os = "linux")'.dependencies]
udev = "0.9"
x11-dl = "2.21"
