# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "mira-plugin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

