# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "mira-plugin-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ed25519-dalek.workspace = true
hex.workspace = true
hidapi = "2.6"
mira-core = { path = "../mira-core" }
mira-plugin-api = { path = "../mira-plugin-api" }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true

