[package]
name = "mira-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "mira-runtime"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rill-ml = "0.5.1"
rill-runtime = "0.5.1"
rill-runtime-protocol = "0.5.1"
mira-protocol = { path = "../mira-protocol" }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true }
